err/rpy2-bioconductor-extensions.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bioc'...
Compiling './lib/python3.5/site-packages/bioc/annotationdbi.py'...
***   File "./lib/python3.5/site-packages/bioc/annotationdbi.py", line 162
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bioc/biobase.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (biobase.py, line 174)
Compiling './lib/python3.5/site-packages/bioc/biostrings.py'...
***   File "./lib/python3.5/site-packages/bioc/biostrings.py", line 585
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bioc/bsgenome.py'...
***   File "./lib/python3.5/site-packages/bioc/bsgenome.py", line 106
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bioc/geoquery.py'...
***   File "./lib/python3.5/site-packages/bioc/geoquery.py", line 97
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bioc/ggbase.py'...
***   File "./lib/python3.5/site-packages/bioc/ggbase.py", line 99
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bioc/ggtools.py'...
***   File "./lib/python3.5/site-packages/bioc/ggtools.py", line 71
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bioc/gseabase.py'...
***   File "./lib/python3.5/site-packages/bioc/gseabase.py", line 144
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bioc/iranges.py'...
***   File "./lib/python3.5/site-packages/bioc/iranges.py", line 289
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bioc/shortread.py'...
***   File "./lib/python3.5/site-packages/bioc/shortread.py", line 295
    except KeyError, ke:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rpy2_bioconductor_extensions-0.2.5.dev0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
